--- a/ui/bottombar/AlarmsBar.ui
+++ b/ui/bottombar/AlarmsBar.ui
@@ -6,155 +6,277 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>269</width>
-    <height>98</height>
+    <width>649</width>
+    <height>140</height>
    </rect>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout_Alarms">
+  <layout class="QVBoxLayout" name="verticalLayout_Autopilot">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QLabel" name="label_MOB_Icon">
-     <property name="minimumSize">
-      <size>
-       <width>32</width>
-       <height>32</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>32</width>
-       <height>32</height>
-      </size>
-     </property>
-     <property name="baseSize">
-      <size>
-       <width>32</width>
-       <height>32</height>
-      </size>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="pixmap">
-      <pixmap resource="../../resources.qrc">:/resources/images/bottombar/imagebutton_alarms.png</pixmap>
-     </property>
-     <property name="scaledContents">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QGridLayout" name="gridLayout_Alarms">
-     <item row="0" column="1">
-      <widget class="QCheckBox" name="checkBox_Sinking">
-       <property name="text">
-        <string>Sinking</string>
-       </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_sinking.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QCheckBox" name="checkBox_Fire">
-       <property name="text">
-        <string>Fire</string>
-       </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_fire.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QCheckBox" name="checkBox">
-       <property name="text">
-        <string>M.O.B</string>
-       </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_Autopilot">
+     <item>
+      <widget class="QToolButton" name="toolButton_Alarms">
        <property name="icon">
-        <iconset theme="application-x-executable"/>
+        <iconset>
+         <normaloff>:/resources/images/bottombar/imagebutton_alarms.png</normaloff>:/resources/images/bottombar/imagebutton_alarms.png</iconset>
        </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_mob.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QCheckBox" name="checkBox_Piracy">
-       <property name="text">
-        <string>Piracy</string>
-       </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_piracy.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QCheckBox" name="checkBox_Abandon">
-       <property name="text">
-        <string>Abandon</string>
-       </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_abandon.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QCheckBox" name="checkBox_Adrift">
-       <property name="text">
-        <string>Adrift</string>
-       </property>
-       <property name="pixmap" stdset="0">
-        <pixmap>:/resources/images/bottombar/alarm_adrift.png</pixmap>
-       </property>
-       <property name="scaledContents" stdset="0">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="verticalLayout_Alarms_Right">
-     <item>
-      <widget class="QToolButton" name="toolButton_Alarms_Hide">
-       <property name="text">
-        <string>Close</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
-        <enum>Qt::Orientation::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
+       <property name="iconSize">
         <size>
-         <width>20</width>
-         <height>40</height>
+         <width>32</width>
+         <height>32</height>
         </size>
        </property>
-      </spacer>
+       <property name="toolButtonStyle">
+        <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <layout class="QGridLayout" name="gridLayout_Alarms">
+       <item row="0" column="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_Abandon">
+         <item>
+          <widget class="QToolButton" name="toolButton_Abandon">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_abandon.png</normaloff>:/resources/images/bottombar/alarm_abandon.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Abandon">
+           <property name="text">
+            <string>Abandon</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_Abandon">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="0" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_MOB">
+         <item>
+          <widget class="QToolButton" name="toolButton_MOB">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_mob.png</normaloff>:/resources/images/bottombar/alarm_mob.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_MOB">
+           <property name="text">
+            <string>MOB</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_MOB">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="0" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_Sinking">
+         <item>
+          <widget class="QToolButton" name="toolButton_Sinking">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_sinking.png</normaloff>:/resources/images/bottombar/alarm_sinking.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Sinking">
+           <property name="text">
+            <string>Sinking</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_Sinking">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout_Fire">
+         <item>
+          <widget class="QToolButton" name="toolButton_Fire">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_fire.png</normaloff>:/resources/images/bottombar/alarm_fire.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Fire">
+           <property name="text">
+            <string>Fire</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_Fire">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_Piracy">
+         <item>
+          <widget class="QToolButton" name="toolButton_Piracy">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_piracy.png</normaloff>:/resources/images/bottombar/alarm_piracy.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Piracy">
+           <property name="text">
+            <string>Piracy</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_Piracy">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="2">
+        <layout class="QHBoxLayout" name="horizontalLayout_Adrift">
+         <item>
+          <widget class="QToolButton" name="toolButton_Adrift">
+           <property name="icon">
+            <iconset>
+             <normaloff>:/resources/images/bottombar/alarm_adrift.png</normaloff>:/resources/images/bottombar/alarm_adrift.png</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>32</width>
+             <height>32</height>
+            </size>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QLabel" name="label_Adrift">
+           <property name="text">
+            <string>Adrift</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="pushButton_Adrift">
+           <property name="text">
+            <string>Raise</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <widget class="QToolButton" name="toolButton_Hide">
+       <property name="icon">
+        <iconset>
+         <normaloff>:/resources/images/bottombar/icon_hide.png</normaloff>:/resources/images/bottombar/icon_hide.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>32</width>
+         <height>32</height>
+        </size>
+       </property>
+       <property name="toolButtonStyle">
+        <enum>Qt::ToolButtonStyle::ToolButtonTextUnderIcon</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../../resources.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
