Added Rudder Widget

--- a/ui/bottombar/AutopilotBar.ui
+++ b/ui/bottombar/AutopilotBar.ui
@@ -189,6 +189,8 @@ color: rgb(0,0,0);</string>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
