--- a/ui/bottombar/AutopilotBar.ui
+++ b/ui/bottombar/AutopilotBar.ui
@@ -25,8 +25,14 @@
    </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_Autopilot">
+        <property name="sizeConstraint">
+      <enum>QLayout::SizeConstraint::SetFixedSize</enum>
+     </property>
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_SX">
+       <property name="sizeConstraint">
+        <enum>QLayout::SizeConstraint::SetFixedSize</enum>
+       </property>
        <item>
         <widget class="QToolButton" name="toolButton_Autopilot">
          <property name="icon">
@@ -49,17 +55,16 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_CN">
        <item>
-        <widget class="QWidget" name="widget_Rudder" native="true">
-         <property name="styleSheet">
-          <string notr="true">background-color: rgb(255, 255, 255);
-color: rgb(0,0,0);</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_Display">
          <item>
           <widget class="QToolButton" name="toolButton_StandBy">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Standby</string>
            </property>
@@ -67,6 +72,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Display">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Display</string>
            </property>
@@ -74,6 +86,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Wind">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Wind</string>
            </property>
@@ -81,6 +100,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_PTack">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Prt Tack</string>
            </property>
@@ -88,6 +114,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Minus10">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>-10</string>
            </property>
@@ -95,13 +128,39 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Minus1">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>-1</string>
            </property>
           </widget>
          </item>
          <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <widget class="QLabel" name="label_Display">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="font">
             <font>
              <pointsize>32</pointsize>
@@ -116,7 +175,27 @@ color: rgb(0,0,0);</string>
           </widget>
          </item>
          <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Orientation::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
           <widget class="QToolButton" name="toolButton_Plus1">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>+1</string>
            </property>
@@ -124,6 +203,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Plus10">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>+10</string>
            </property>
@@ -131,6 +217,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_STack">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Stb Tack</string>
            </property>
@@ -138,6 +231,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Route">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Route</string>
            </property>
@@ -145,6 +245,13 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Steer">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Steer</string>
            </property>
@@ -152,8 +259,43 @@ color: rgb(0,0,0);</string>
          </item>
          <item>
           <widget class="QToolButton" name="toolButton_Auto">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+           </property>
            <property name="text">
             <string>Auto</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_Rudder">
+         <property name="styleSheet">
+          <string notr="true"/>
+         </property>
+         <property name="text">
+          <string>Rudder</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignmentFlag::AlignCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_Rudder">
+         <property name="sizeConstraint">
+          <enum>QLayout::SizeConstraint::SetFixedSize</enum>
+         </property>
+         <item>
+          <widget class="QWidget" name="widget_Rudder" native="true">
+           <property name="styleSheet">
+            <string notr="true">background-color: rgb(255, 255, 255);
+color: rgb(0,0,0);</string>
            </property>
           </widget>
          </item>
@@ -165,6 +307,9 @@ color: rgb(0,0,0);</string>
       <layout class="QVBoxLayout" name="verticalLayout_DX">
        <property name="spacing">
         <number>-1</number>
+       </property>
+       <property name="sizeConstraint">
+        <enum>QLayout::SizeConstraint::SetFixedSize</enum>
        </property>
        <item>
         <widget class="QToolButton" name="toolButton_Hide">
@@ -189,8 +334,6 @@ color: rgb(0,0,0);</string>
    </item>
   </layout>
  </widget>
- <customwidgets>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
