--- a/ui/mydata/MyData.ui
+++ b/ui/mydata/MyData.ui
@@ -24,14 +24,14 @@
        <string>Waypoints</string>
       </attribute>
      </widget>
-     <widget class="QWidget" name="tabTracks">
-      <attribute name="title">
-       <string>Tracks</string>
-      </attribute>
-     </widget>
      <widget class="QWidget" name="tabRoutes">
       <attribute name="title">
        <string>Routes</string>
+      </attribute>
+     </widget>
+     <widget class="QWidget" name="tabTracks">
+      <attribute name="title">
+       <string>Tracks</string>
       </attribute>
      </widget>
      <widget class="QWidget" name="tabFiles">
@@ -43,6 +43,13 @@
    </item>
    <item row="1" column="0">
     <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(82, 82, 83);
+border-top-color: rgb(159, 157, 160);
+border-left-color: rgb(159, 157, 160);
+border-right-color: rgb(83, 83, 84);
+border-bottom-color: rgb(83, 83, 84);</string>
+     </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::StandardButton::Close</set>
      </property>
